# voice_assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  audio1.m4a  audio2.m4a  iphone_voice_upload_endpoint_spec.md  pyproject.toml  test_api.py  test_api2.py  test_audio_version_api.py  voice_command_backend_spec_with_google_v2.md  voice_command_parser_architecture.md
.github/workflows/: deploy.yml
alembic/: Untitled  env.py
alembic/versions/: 25139b53a89f_add_command_logs_table.py  9c881687ad18_initial_tables.py
app/: config.py  db.py  main.py
app/models/: __init__.py  command_log.py  integration.py  user.py
app/routers/: auth.py  voice.py  voice_command.py
app/schemas/: voice.py  voice_command.py
app/services/: calendar.py  classifier.py  llm.py  prompts.py  router.py  slack.py  slack_messenger.py  todoist.py  transcription.py  voice_command.py
app/utils/: auth.py
scripts/: api_testing.ipynb  create_user.py  db_query.py  deploy.sh  test_audio_version_api.py  test_slack_app.py  test_todoist.py
tests/: test_classifier.py  test_crypto.py  test_voice.py  test_voice_command.py
